<resources>
    //activity_main.xml
    <string name="exit_station">Izstopna postaja</string>
    <string name="entry_station">Vstopna postaja</string>
    <string name="showAll_button">Prikaži vse</string>
    <string name="showSingle_button">Najdi</string>
    <string name="network_error_message">Ni omrežne povezave</string>
    <string name="app_name">SlovenijaBus</string>
    <string name="arrival">Prihod:</string>
    <string name="departure">Odhod:</string>
    <string name="duration">Trajanje:</string>
    <string name="semicolon">:</string>
    <string name="prevoznik">Prevoznik</string>
    <string name="relacija">Relacija</string>
    <string name="showall_entry_station">Vstop:</string>
    <string name="showall_exit_station">Izstop:</string>
    <string name="showall_date">Datum: %1$s</string>
    <string name="favorites">Priljubljene</string>
    <string name="date">Datum</string>
    <string name="preferences_key"> si.uni_lj.fe.tnuv.slovenijabus</string>
    <string name="favorite">Favorite</string>
    <string name="change_direction">Zamenjaj smer</string>
    <string name="invalid_station">Neveljavno ime postaje</string>
    <string name="entry">Vstop:</string>
    <string name="exit">Izstop:</string>
    <string name="no_buses_message">Med izbranimi postajami ni avtobusov</string>
    <string name="add_to_favorites">Dodano med priljubljene</string>
    <string name="no_buses_left_on_this_day">Zamudil si vse avtobuse :(</string>
    <string name="remove_from_favorites">Odstranjeno izmed priljubljenih</string>
    <string name="price">Cena:</string>
    <string name="company">Prevoznik:</string>
    <string name="line">Relacija:</string>
    <string name="via_stations">Vmesne postaje:</string>
    <string name="invalid_station_message">Vnesli ste neveljavno ime postaje.\nProsimo, da izbirate samo med postajami, ki so vam na voljo.</string>
    <string name="no_buses_on_this_day">Na ta dan ni odhodov. Prikazani so odhodi za dan %1$s.</string>
    <string name="invalid_station_name">Neveljavno ime postaje</string>


    //activity_eta.xml
    <string name="odhod">ODHOD</string>
    <string name="prihod">PRIHOD</string>
    <string name="vozni_red">VOZNI RED</string>
</resources>
