<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dropdown_item_company_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/company"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/dropdown_item_company"
        app:layout_constraintStart_toStartOf="@id/dropdown_first_item_guidelineStart_vertical" />

    <TextView
        android:id="@+id/dropdown_item_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/dropdown_first_item_guidelineEnd_vertical"
        app:layout_constraintStart_toEndOf="@id/dropdown_item_company_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dropdown_item_line_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/line"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dropdown_item_line"
        app:layout_constraintStart_toStartOf="@id/dropdown_first_item_guidelineStart_vertical" />

    <TextView
        android:id="@+id/dropdown_item_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dropdown_item_via_stations"
        app:layout_constraintEnd_toEndOf="@id/dropdown_first_item_guidelineEnd_vertical"
        app:layout_constraintStart_toStartOf="@id/dropdown_item_company"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_item_company" />

    <TextView
        android:id="@+id/dropdown_item_via_stations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/via_stations"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/dropdown_first_item_guidelineStart_vertical" />

    <android.support.constraint.Guideline
        android:id="@+id/dropdown_first_item_guidelineStart_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/dropdown_first_item_guidelineEnd_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
</android.support.constraint.ConstraintLayout>