<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <AutoCompleteTextView
        android:id="@+id/vstopna_vnos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/entry_station"
        app:layout_constraintBottom_toTopOf="@+id/izstopna_vnos"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/izstopna_vnos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/exit_station"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vstopna_vnos" />

    <!--    <Button
            android:id="@+id/prikazi_vse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:onClick="launchShowAll"
            android:text="@string/showAll_button"
            app:layout_constraintEnd_toStartOf="@+id/main_guidelineMid"
            app:layout_constraintTop_toBottomOf="@+id/datum_vnos" />

        <Button
            android:id="@+id/najdi"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/showSingle_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/prikazi_vse"
            app:layout_constraintStart_toStartOf="@+id/main_guidelineMid" />-->

    <TextView
        android:id="@+id/prikazi_vse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="launchShowAll"
        android:text="@string/showAll_button"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/main_guidelineMid"
        app:layout_constraintTop_toBottomOf="@+id/datum_vnos" />

    <TextView
        android:id="@+id/najdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/showSingle_button"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/prikazi_vse"
        app:layout_constraintStart_toStartOf="@+id/main_guidelineMid" />

    <Button
        android:id="@+id/datum_vnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/transparent"
        android:onClick="setDate"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/izstopna_vnos" />

    <TextView
        android:id="@+id/favorites_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/favorites"
        android:textSize="20sp"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prikazi_vse" />

    <ListView
        android:id="@+id/favorites_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_textView" />

    <!--    <TextView
            android:id="@+id/datum_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/date"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/datum_vnos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/izstopna_vnos" />-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:src="@drawable/date_icon_black"
        app:layout_constraintBottom_toBottomOf="@id/datum_vnos"
        app:layout_constraintEnd_toStartOf="@id/datum_vnos"
        app:layout_constraintTop_toTopOf="@id/datum_vnos" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:onClick="swapStations"
        android:scaleType="center"
        android:scaleY="1.5"
        android:src="@drawable/swap_arrows_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/izstopna_vnos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vstopna_vnos"
        app:layout_constraintTop_toTopOf="@+id/vstopna_vnos" />

    <android.support.constraint.Guideline
        android:id="@+id/main_guidelineMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>