<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".etaActivity">

    <!-- Placeholder za gumb za priljubljene -->
    <ImageButton
        android:id="@+id/priljubljene"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:onClick="favoritesButton"
        android:src="@drawable/heart_empty_white"
        android:text="@string/favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trenutenOdhod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="10\:15"
        android:textColor="@color/stongTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/naslednjiOdhod"
        app:layout_constraintEnd_toEndOf="@+id/naslednjiOdhod"
        app:layout_constraintStart_toStartOf="@+id/naslednjiOdhod" />

    <Button
        android:id="@+id/prejsnjiPrihod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10\:26"
        android:background="@drawable/button_rounded"
        android:textColor="@color/colorAccent"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/prejsnjiOdhod"
        app:layout_constraintEnd_toEndOf="@+id/naslednjiPrihod"
        app:layout_constraintStart_toStartOf="@+id/naslednjiPrihod" />

    <Button
        android:id="@+id/prejsnjiOdhod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="10\:00"
        android:background="@drawable/button_rounded"
        android:textColor="@color/colorAccent"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/trenutenOdhod"
        app:layout_constraintEnd_toEndOf="@+id/naslednjiOdhod"
        app:layout_constraintStart_toStartOf="@+id/naslednjiOdhod" />

    <ProgressBar
        android:id="@+id/potETA"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="332dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:progressTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/izpisETA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Lepše izgleda brez modrega ozadja
        android:progressDrawable="@drawable/button_rounded" -->

    <Button
        android:id="@+id/naslednjiPrihod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="10\:57"
        android:background="@drawable/button_rounded"
        android:textColor="@color/colorAccent"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/naslednjiOdhod"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/naslednjiOdhod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="32dp"
        android:text="10\:30"
        android:background="@drawable/button_rounded"
        android:textColor="@color/colorAccent"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/potETA"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- PLACEHOLDER ZA DATUM
    <TextView
        android:id="@+id/datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="01. 06. 2019"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/zamenjajSmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        -->
    <!-- DATUM -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/date_icon_black"
        app:layout_constraintBottom_toBottomOf="@+id/datum"
        app:layout_constraintEnd_toStartOf="@id/datum"
        app:layout_constraintTop_toTopOf="@+id/datum" />

    <android.support.v7.widget.CardView
        android:id="@+id/datum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:outlineAmbientShadowColor="@android:color/black"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/zamenjajSmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/datum_vnos_eta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="setDate"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:textColor="@android:color/primary_text_light"
            android:textSize="22sp"
            android:textStyle="normal" />
    </android.support.v7.widget.CardView>
    <!-- -->

    <ImageButton
        android:id="@+id/zamenjajSmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:background="@android:color/transparent"
        android:scaleType="center"
        android:scaleX="2"
        android:scaleY="1.5"
        android:src="@drawable/swap_arrows_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/krajPrihod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/krajPrihod" />
        <!-- app:srcCompat="@drawable/swap_arrows_horizontal" -->

    <TextView
        android:id="@+id/postajaOdhod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/odhod"
        android:textColor="@color/stongTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/krajOdhod"
        app:layout_constraintEnd_toEndOf="@+id/krajOdhod"
        app:layout_constraintStart_toStartOf="@+id/krajOdhod"
        app:layout_constraintTop_toBottomOf="@+id/datum" />

    <TextView
        android:id="@+id/postajaPrihod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prihod"
        android:textColor="@color/stongTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/postajaOdhod"
        app:layout_constraintEnd_toEndOf="@+id/krajPrihod"
        app:layout_constraintStart_toStartOf="@+id/krajPrihod" />

    <TextView
        android:id="@+id/krajOdhod"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:lines="3"
        android:maxLines="3"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/prejsnjiOdhod"
        app:layout_constraintEnd_toEndOf="@+id/prejsnjiOdhod"
        app:layout_constraintStart_toStartOf="@+id/prejsnjiOdhod" />

    <!--


    android:singleLine="true"
    android:ellipsize="marquee"
    -->

    <TextView
        android:id="@+id/krajPrihod"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lines="3"
        android:maxLines="3"
        android:singleLine="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/krajOdhod"
        app:layout_constraintEnd_toEndOf="@+id/prejsnjiPrihod"
        app:layout_constraintStart_toStartOf="@+id/prejsnjiPrihod" />

    <Button
        android:id="@+id/urnik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="64dp"
        android:onClick="launchShowAll"
        android:text="@string/vozni_red"
        android:background="@drawable/button_rounded"
        android:textColor="@color/colorAccent"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/izpisETA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginBottom="32dp"
        android:text="0\:24"
        android:textAlignment="center"
        android:textColor="@color/stongTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/urnik"
        app:layout_constraintEnd_toStartOf="@+id/ikonaETA"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ikonaETA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="@+id/izpisETA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/izpisETA"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />


    <TextView
        android:id="@+id/trenutenPrihod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10\:42"
        android:textColor="@color/stongTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/trenutenOdhod"
        app:layout_constraintEnd_toEndOf="@+id/naslednjiPrihod"
        app:layout_constraintStart_toStartOf="@+id/naslednjiPrihod" />


</android.support.constraint.ConstraintLayout>